# kvdb

./: .gitignore  Cargo.toml  LICENSE  README.ja.md  README.md  benchmark.py
.github/workflows/: ci.yml
examples/: demo_operations.rs  demo_semantic_search.rs  embed_wikipedia.rs  fetch_wikipedia.py  gen_demo.rs
src/: cli.rs  db.rs  lib.rs  main.rs  server.rs  vector.rs
tests/: api_e2e.rs  persistence_e2e.rs
