[package]
name = "kvdb"
version = "0.3.0"
edition = "2024"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
bincode = "1.3"
serde_json = "1.0"
actix-web= "4"

[dev-dependencies]
tempfile = "3.10"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time", "rt"] }
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.21"
hf-hub = "0.4"
